Fixed login<->register link too wide

--- a/backend/static/login.css
+++ b/backend/static/login.css
@@ -72,7 +72,8 @@ button[type='submit']:active {
 }
 
 a {
-  text-align: center;
+  width: fit-content;
+  justify-self: center;
   font-size: small;
   font-weight: 500;
   text-decoration: none;
